ingresstest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coyaho-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /prometheus(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: prometheus-server
                port:
                  number: 80
          - path: /flask_api(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: flask-service
                port:
                  number: 80
          - path: /database(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: azure-vote-back
                port:
                  number: 80
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: azure-vote-front
                port:
                  number: 80
